# PracticasInteligenciaNegocio

./: .gitignore  README.md
.dvc/: config
Práctica 1/: Notes Dataset.md
Práctica 1/Memoria/: Makefile  Memoria.out  Memoria.tex  References.bib
Práctica 2/: Casos de estudio.ipynb  Notes.md  Pipfile  Use Case First.ipynb
Práctica 3/: Notebook.ipynb  Notes.md  pyproject.toml
Práctica 3/Memoria/: Memoria.tex  References.bib
Práctica 3/Notebook01/: Notebook.ipynb
Práctica 3/Notebook01/.ipynb_checkpoints/: Notebook-checkpoint.ipynb
Práctica 3/Notebook02/: Notebook.ipynb  submission_final.csv
Práctica 3/Notebook03/: Notebook.ipynb  final_submission.csv
Práctica 3/Notebook04/: Notebook.ipynb  final_submission.csv
Práctica 3/Notebook05/: Notebook.ipynb  final_submission.csv
Práctica 3/Notebook06/: Notebook.ipynb
Práctica 3/Notebook07/: Notebook.ipynb  final_submission.csv
Práctica 3/Notebook08/: Notebook.ipynb
Práctica 3/Notebook09/: Notebook.ipynb  final_submission.csv
Práctica 3/Notebook10/: Notebook.ipynb  final_submission.csv
Práctica 3/Notebook11/: Notebook.ipynb  final_submission.csv
Práctica 3/Notebook12/: Notebook.ipynb
Práctica 3/Notebook13/: Notebook.ipynb  final_submission.csv
Práctica 3/Notebook14/: Notebook.ipynb  final_submission.csv
Práctica 3/data/: .gitignore  submission_format.csv.dvc  test_set_features_cached.npy.dvc  training_set_features_cached.npy.dvc  training_set_labels_cached.npy.dvc  validation_set_features_cached.npy.dvc  validation_set_labels_cached.npy.dvc
ToggleProject/: Data Analysis.ipynb  README.md
(+5220 files in other folders)
