[tool.poetry]
name = "práctica 3"
version = "0.1.0"
description = "Tercera práctica de la asignatura Inteligencia de Negocio"
authors = ["Sergio <sergiquijano@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10"
jupyter = "^1.0.0"
jupyterlab = "^3.2.5"
numpy = "^1.21.4"
pandas = "^1.3.5"
scikit-learn = "^1.0.1"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
imbalanced-learn = "^0.8.1"
catboost = "^1.0.3"
xgboost = "^1.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
